fix: Text overflow when the application status panel item was too big

--- a/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
+++ b/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
@@ -17,6 +17,7 @@
         font-size: .8em;
         line-height: 1.2;
         color: $argo-color-gray-5;
+        overflow: hidden;
 
         &:not(:first-child) {
             border-left: 1px solid $argo-color-gray-3;
